fix: adjust gap in like-card utility for improved layout

--- a/packages/@geee-be/react-twui/css/like.css
+++ b/packages/@geee-be/react-twui/css/like.css
@@ -126,7 +126,7 @@
 
 @utility like-card {
   @layer components {
-    @apply antialiased flex flex-col gap-4 overflow-clip;
+    @apply antialiased flex flex-col gap-0 overflow-clip;
     @apply like-paper;
 
     /* shape */
